--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "home",
-  "author": "imsyy",
-  "github": "https://github.com/imsyy/home",
-  "home": "https://imsyy.top",
+  "author": "lianli",
+  "github": "https://github.com/zy111x/home",
+  "home": "https://home.291055.xyz",
   "private": true,
   "version": "4.1.4",
   "type": "module",
