--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_SITE_NAME = "LianLiの主页" # 名称
 VITE_SITE_AUTHOR = "LianLi" # 作者
 VITE_SITE_KEYWORDS = "LianLi,个人主页" # 关键词
 VITE_SITE_DES = "一个默默无闻的主页" # 站点简介
-VITE_SITE_URL = "home.291055.xyz" # 站点地址
+VITE_SITE_URL = "LianLi" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
 VITE_SITE_MAIN_LOGO = "/images/icon/logo.png" # 主页图标
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
