--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "home",
-  "author": "lianli",
+  "author": "zy111x",
   "github": "https://github.com/zy111x/home",
   "home": "https://home.291055.xyz",
   "private": true,
